# sol-mainframe

./: .gitignore  Cargo.toml  README.md  todo
bot/: Cargo.toml
bot/src/: main.rs  rowifi.rs
bot/src/commands/: career.rs  mod.rs
mainframe/: Cargo.toml
mainframe/src/: cosmetics.rs  database.rs  discord.rs  event.rs  event_queue.rs  main.rs  stats.rs  util.rs
src/: database.rs  event.rs  main.rs  profile.rs  rank.rs  roblox.rs
util/: '  Cargo.toml
util/src/: lib.rs  mainframe.rs  rank.rs  roblox.rs
