[package]
name = "sol-mainframe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
byteorder = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
libsql = { version = "0.3.5", default-features = true }
num-derive = "0.4.2"
num-traits = "0.2.19"
rayon = "1.10.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sol-util = { git = "https://github.com/solar-mechanicus/sol-util.git", version = "0.1.16" }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
toml = "0.8.13"
