[package]
name = "astartes-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
poise = "0.6.1"
reqwest = { version = "0.12.4", features = ["rustls-tls", "json"] }
serde = { version = "1.0.202", features = ["derive"] }
# sol-util = { git = "https://github.com/solar-mechanicus/sol-util.git", version = "0.1.26" }
sol-util = { path = "../util" }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
toml = "0.8.13"
tracing = "0.1.40"
