# This line needs to come before anything else in Cargo.toml
# cargo-features = ["codegen-backend"]
#
# [profile.dev]
# codegen-backend = "cranelift"

[package]
name = "sol-mainframe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
byteorder = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
libsql = { version = "0.4.0", default-features = true }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
# sol-util = { git = "https://github.com/solar-mechanicus/sol-util.git", version = "0.1.33" }
sol-util = { path = "../util" } 
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
toml = "0.8.13"
ron = "0.8.1"
